--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <title>Pages</title>
 </head>
 
-<body>
-    <header class="header">
+<body >
+    <header class="header" >
         <div class="header_row _conteiner">
             <div class="header_left_row">
-                <a href="" class="header_logo">
+                <a data-goto=".section_1" href="#" class="header_logo">
                     <img src="./img/LOGO.svg" alt="">
                 </a>
                 <div class="soc_icons">
@@ -36,16 +36,16 @@
                 <span></span>
             </div>
             <div class="header_right_row">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#pages">Pages</a>
-                <a href="#contact">Contact Us</a>
-                <a href="#pay"><img src="./img/Basket.svg" alt=""></a>
+                <a data-goto=".section_1" href="#" class="menu_link">Home</a>
+                <a data-goto=".section_3" href="#" class="menu_link">About</a>
+                <a data-goto="" href="#" class="menu_link">Pages</a>
+                <a data-goto="" href="#" class="menu_link">Contact Us</a>
+                <a data-goto="" href="#" class="menu_link"><img src="./img/Basket.svg" alt=""></a>
                 <button class="btn-pay">Order Today</button>
             </div>
         </div>
     </header>
-    <div name="home" class="section_1">
+    <div class="section_1">
         <div class="block_1 _conteiner">
             <div class="info">
                 <h2>
