--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header" >
         <div class="header_row _conteiner">
             <div class="header_left_row">
-                <a data-goto=".section_1" href="#" class="header_logo">
+                <a data-goto=".section_1" href="#" class="header_logo menu_link">
                     <img src="./img/LOGO.svg" alt="">
                 </a>
                 <div class="soc_icons">
